<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dip"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idclasequipo" />
        <EditText
            android:id="@+id/editIdClasEquipo"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descrclasequipo" />
        <EditText
            android:id="@+id/editDescClasEquipo"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarClasEquipo"
            android:layout_marginRight="10dp"
            android:text="@string/actualizar" />

        <Button
            android:onClick="limpiarTexto"
            android:layout_marginLeft="10dp"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>