<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sv.edu.ues.eisi.proyecto1.ui.home.HomeFragment"
        android:label="@string/menu_home1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_equipo"
        android:name="sv.edu.ues.eisi.proyecto1.EquipoFragment"
        android:label="@string/menu_equipo"
        tools:layout="@layout/fragment_equipo" />

    <fragment
        android:id="@+id/nav_clas_equipo"
        android:name="sv.edu.ues.eisi.proyecto1.ClasEquipoFragment"
        android:label="@string/menu_clas_equipo"
        tools:layout="@layout/fragment_clas_equipo" />

</navigation>