<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idclasequipo"/>
    <EditText
        android:id="@+id/editIdClasEquipo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="10"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:onClick="consultarClasEquipo"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrclasequipo" />

    <EditText
        android:id="@+id/editDescClasEquipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:longClickable="false" />

</LinearLayout>